--- a/style.css
+++ b/style.css
@@ -167,15 +167,27 @@ span.email-right::after {
 .introduction {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 300px;
+  grid-template-rows: 1fr 280px;
 }
 
 .introduction > div:nth-of-type(1) {
   grid-column: 1 / 3;
 }
 
+.introduction-text {
+  padding: 1rem;
+}
+
 .introduction-video {
   padding: 1rem;
+
+  background-color: white;
+  border-radius: 0.6rem;
+}
+
+.intro-transcript {
+  height: 11rem;
+  overflow: scroll;
 }
 
 
